--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "",
   "dependencies": {
-    "chai": "3.5.0",
-    "jwebdriver": "2.2.6",
-    "mocha": "5",
+    "chromedriver": "^79.0.0",
+    "jquery": "3.x",
     "macaca-mocha-parallel-tests": "2.x",
     "macaca-reporter": "1",
+    "mocha": "5",
     "resemblejs-node": "1.0.0",
-    "selenium-standalone": "6.x.x",
-    "jquery": "3.x"
+    "selenium-standalone": "6.x.x"
   },
   "devDependencies": {
+    "ajax-hook": "^1.8.3",
+    "chai": "^3.5.0",
+    "expect.js": "^0.3.1",
+    "faker": "^4.1.0",
+    "jwebdriver": "^2.3.2",
+    "mocha-generators": "^2.0.0"
   },
   "scripts": {
     "installdriver": "./node_modules/.bin/selenium-standalone install --drivers.firefox.baseURL=http://npm.taobao.org/mirrors/geckodriver --baseURL=http://npm.taobao.org/mirrors/selenium --drivers.chrome.baseURL=http://npm.taobao.org/mirrors/chromedriver --drivers.ie.baseURL=http://npm.taobao.org/mirrors/selenium",
